--- a/Akaunting_3.0.15-Stable/.env.example
+++ b/Akaunting_3.0.15-Stable/.env.example
@@ -8,11 +8,11 @@ APP_SCHEDULE_TIME="09:00"
 APP_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_HOST=db-mysql-fra1-71041-do-user-6338171-0.b.db.ondigitalocean.com
+DB_PORT=25060
+DB_DATABASE=defaultdb
+DB_USERNAME=doadmin
+DB_PASSWORD=AVNS_FxNGkqvt8vnoDUqGGKj
 DB_PREFIX=
 
 BROADCAST_DRIVER=log
