--- a/Akaunting_3.0.15-Stable/.env.example
+++ b/Akaunting_3.0.15-Stable/.env.example
@@ -5,7 +5,7 @@ APP_INSTALLED=false
 APP_KEY=
 APP_DEBUG=true
 APP_SCHEDULE_TIME="09:00"
-APP_URL=
+APP_URL=https://sabdevengineering.xyz/
 
 DB_CONNECTION=mysql
 DB_HOST=db-mysql-fra1-71041-do-user-6338171-0.b.db.ondigitalocean.com
