--- a/Akaunting_3.0.15-Stable/.env.example
+++ b/Akaunting_3.0.15-Stable/.env.example
@@ -10,7 +10,7 @@ APP_URL=https://sabdevengineering.xyz/
 DB_CONNECTION=mysql
 DB_HOST=db-mysql-fra1-71041-do-user-6338171-0.b.db.ondigitalocean.com
 DB_PORT=25060
-DB_DATABASE=defaultdb
+DB_DATABASE=sab
 DB_USERNAME='doadmin'
 DB_PASSWORD='AVNS_FxNGkqvt8vnoDUqGGKj'
 DB_PREFIX=
